[package]
name = "image-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
hex = "0.4.3"
magic-crypt = "3.1.13"
tokio = { version = "1", features = ["full"] }
warp = "0.3.6"
reqwest = { version = "0.11", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
image = "0.24.7"
serde = { version = "1.0", features = ["derive"] }