[package]
name = "image-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
hex = "0.4.3"
magic-crypt = "3.1.13"
tokio = { version = "1", features = ["full"] }
warp = "0.3.7"
reqwest = { version = "0.12.4", features = ["json"] }
openssl = { version = "0.10.64", features = ["vendored"] }
image = "0.25.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
colored = "2.1.0"
